--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -12,6 +12,7 @@ html {
   flex-direction: column;
   align-items: center;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
@@ -21,13 +22,13 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   font-family: "Afacad Flux", sans-serif;
 }
 
 nav {
   width: 100%;
-  height: 120px;
+  height: 60px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -39,27 +40,6 @@ nav {
   z-index: 10500;
   gap: 20px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
-}
-nav .topNav {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
-  cursor: default;
-  gap: 10px;
-  box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
-}
-nav .topNav img {
-  width: 25px;
-  height: auto;
-}
-nav .topNav p {
-  font-weight: 600;
-  font-size: 16px;
-  color: #353535;
 }
 nav header {
   display: flex;
@@ -85,7 +65,7 @@ nav header .mobileHeader #myLogo {
   cursor: pointer;
 }
 nav header .mobileHeader img {
-  width: 40px;
+  width: 25px;
   height: auto;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -136,7 +116,7 @@ nav header .mobileHeader ul #catalogo:hover {
   box-shadow: 0px 0px 50px 10px #414141;
   overflow: hidden;
   gap: 20px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
 }
 .burguerMenu div {
   width: 90%;
@@ -206,7 +186,7 @@ nav header .mobileHeader ul #catalogo:hover {
   gap: 10px;
 }
 .burguerMenu .socialMedia p {
-  color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  color: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   background-color: transparent;
   font-weight: 600;
   font-size: 23px;
@@ -219,7 +199,7 @@ nav header .mobileHeader ul #catalogo:hover {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-color: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   color: #353535;
   font-size: 14px;
 }
@@ -317,7 +297,7 @@ main #categorySection .links div span {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   margin-top: -40px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px #414141;
@@ -377,7 +357,7 @@ main #selectCategory ul {
   flex-direction: column;
   align-items: center;
   border-radius: 20px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   border: 1px solid #353535;
 }
 main #selectCategory ul li {
@@ -406,7 +386,7 @@ main .category h2 {
   justify-content: space-around;
   flex-direction: row;
   align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   padding-left: 10px;
   border-bottom-left-radius: 60px;
   border-bottom-right-radius: 60px;
@@ -512,7 +492,7 @@ main .category div div div span {
 main .category div div div span button {
   width: 150px;
   height: 40px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   border: 1px solid #353535;
   border-radius: 60px;
   font-size: 23px;
@@ -571,7 +551,7 @@ main .category p {
   align-items: center;
   border-radius: 60px;
   font-weight: 600;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   border: 1px solid #353535;
 }
 main .sectionForm {
@@ -598,7 +578,7 @@ main .sectionForm form {
   height: 300px;
   border-radius: 20px;
   border: 1px solid #414141;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
   gap: 5px;
 }
 main .sectionForm form #errorMessage {
