--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -3,7 +3,7 @@
 
 //Variables
 $backgroundImage: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
-$secondBackgroundImage: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+$secondBackgroundImage: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
 $cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 $lightBackgroundImage: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
 $sm: 12px;
@@ -84,6 +84,7 @@ html{
     @include sizes();
     @include displayFlex();
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 //Body
@@ -96,7 +97,7 @@ body{
 
 //Nav
 nav{
-    @include sizes($height: 120px);
+    @include sizes($height: 60px);
     @include displayFlex();
     position: fixed;
     top:0px;
@@ -105,23 +106,6 @@ nav{
     gap: 20px;
     box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
-    .topNav{
-        @include sizes(100%);
-        @include displayFlex($flexDirection:row);
-        background-image: $secondBackgroundImage;
-        cursor: default;
-        gap: 10px;
-        box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
-
-        img{
-            @include sizes(25px,auto);
-        }
-        p{
-            font-weight: $bold;
-            font-size: $md;
-            color: $darkFontColor;
-        }
-    }
     header{
         @include displayFlex();
         @include sizes($height: 50px);
@@ -137,7 +121,7 @@ nav{
                 cursor: pointer;
             }
             img{
-                @include sizes(40px, auto);
+                @include sizes(25px, auto);
                 cursor: pointer;
                 transition: all 0.3s ease;
             }
