--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -215,7 +215,7 @@ main {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding-top: 140px;
+  padding-top: 90px;
   gap: 20px;
 }
 main #categorySection {
@@ -404,8 +404,9 @@ main .category div {
   align-items: center;
   overflow-y: scroll;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 20px;
   padding-top: 10px;
+  margin-bottom: 10px;
 }
 main .category div div {
   width: 350px;
