--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -243,7 +243,7 @@ nav{
 main{
     @include sizes();
     @include displayFlex();
-    padding-top: 140px;
+    padding-top: 90px;
     gap: 20px;
     
     //Contenedor de categorias
@@ -385,8 +385,9 @@ main{
             @include displayFlex($flexDirection:row);
             overflow-y: scroll;
             flex-wrap: wrap;
-            gap: 5px;
+            gap: 20px;
             padding-top: 10px;
+            margin-bottom: 10px;
         
             div{
                 @include sizes(350px,500px);
