--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -457,7 +457,7 @@ main #categoriesSection .toBriefcaseSection .contactSection .numeroCiudad ul {
 }
 main #categoriesSection .toBriefcaseSection .contactSection .numeroCiudad ul li {
   justify-content: flex-start;
-  font-size: 23px;
+  font-size: 19px;
 }
 main #categoriesSection .seventhCategory {
   background-image: url(/public/imgs/categories/hoodiesSueterCategory.jpeg);
@@ -607,11 +607,18 @@ footer {
   height: 300px;
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   z-index: 10999;
   box-shadow: 0px 0px 20px 1px #414141;
   background-image: linear-gradient(-225deg, #e6e6e6 0%, #ffffff 100%);
+  color: #353535;
+}
+footer .footerTop {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
 }
 footer img {
   width: 30%;
@@ -642,6 +649,29 @@ footer div ul span {
 }
 footer div ul span:hover {
   border-bottom: 1px solid #353535;
+}
+footer .footerBottom {
+  width: 100%;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+footer .footerBottom span {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
+footer .footerBottom span a {
+  text-decoration: none;
+  font-weight: 600;
+  color: #85285e;
+  cursor: pointer;
 }
 
 @keyframes zoomAnimation {
