--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -353,6 +353,7 @@ main{
                     font-size: $lg;
                     color: $lightFontColor;
                     font-weight: 400;
+                    cursor: pointer;
                 }
         }
         .secondCategory{
