--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -440,6 +440,8 @@ main .category div {
   flex-direction: row;
   align-items: center;
   overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: 0px;
   flex-wrap: wrap;
   gap: 20px;
   padding-top: 10px;
