--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -441,7 +441,7 @@ main .category div {
   align-items: center;
   overflow-y: scroll;
   overflow-x: hidden;
-  scrollbar-width: 0px;
+  scrollbar-width: none;
   flex-wrap: wrap;
   gap: 20px;
   padding-top: 10px;
